feed html added

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,42 @@
-<div id="qrcode"></div>
+<div id="area">
+    <button id="copy-button" disabled>copy</button>
+    <input type="text" id="ps" />
+    <br />
+</div>
+<style>
+    input {
+        border:none;
+        color: white;
+        font-size: 1px;
+    }
+</style>
 <script type="text/javascript" src="https://unpkg.com/qr-code-styling/lib/qr-code-styling.js"></script>
 <script src="socket.io/socket.io.js"></script>
 <script type="text/javascript">
+    var area = document.getElementById("area")
+    var copyButton = document.getElementById("copy-button")
+    var hiddenInput = document.getElementById('ps')
     function uuidv4() {
         return ([1e7] + -1e3 + -4e3 + -8e3 + -1e11).replace(/[018]/g, c =>
             (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
         );
     }
-    function copy(text) {
-        var input = document.createElement('input');
-        input.setAttribute('value', text);
-        document.body.appendChild(input);
-        input.select();
-        var result = document.execCommand('copy');
-        document.body.removeChild(input);
+    function clipboard(text) { 
+        hiddenInput.value = text
+        var canvas = area.querySelector('canvas')
+        area.removeChild(canvas)
+        copyButton.disabled = false
+        copyButton.addEventListener('click', copy)
+    }
+    function copy() {
+        hiddenInput.select();
+        document.execCommand('copy');
         location.reload();
     }
     const socket = io();
-    const room = uuidv4();    
+    const room = uuidv4();
     socket.emit('joinRoom', room);
-    socket.on('copy', (message) => copy(message));
+    socket.on('copy', (message) => clipboard(message));
 
     const qrCode = new QRCodeStyling({
         width: 300,
@@ -30,5 +47,5 @@
             type: "square"
         },
     });
-    qrCode.append(document.getElementById("qrcode"));
+    qrCode.append(area);
 </script>
